name:                afterdark
version:             0.1.0.0
synopsis:            The temporally-dependent social network
description:         Please see README.md
homepage:            http://github.com/hlian/afterdark
license:             BSD3
license-file:        LICENSE
author:              Hao Lian
maintainer:          hi@haolian.org
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AD
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010


executable new-template-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , afterdark
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hlian/afterdark
